--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,8 @@
 @import "member.scss";
 @import "community.scss";
 @import "join.scss";
+@import "youtube.scss";
+@import "gallery.scss";
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Faustina:wght@600&display=swap");
 // 'DM Serif Display';
 // 'Faustina';
